--- a/src/main/resources/templates/MailTemplate.html
+++ b/src/main/resources/templates/MailTemplate.html
@@ -7,24 +7,24 @@
             margin: 0;
             padding: 0;
             background: #f4f4f4;
-            font-family: Arial, sans-serif; /* 기본 글꼴 설정 */
+            font-family: Arial, sans-serif;
         }
         .content-box {
-            background: #f28861; /* 흰색 배경 */
+            background: #f28861;
             padding: 30px;
             text-align: center;
-            border-radius: 8px; /* 모서리 둥글게 */
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
-            max-width: 600px; /* 최대 너비 설정 */
-            margin: 20px auto; /* 중앙 배치 */
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+            margin: 20px auto;
         }
         h1 {
-            color: #555; /* 제목 색상 */
-            margin-bottom: 10px; /* 아래 마진 */
+            color: #555;
+            margin-bottom: 10px;
         }
         p {
-            color: #555; /* 본문 색상 */
-            margin: 5px 0; /* 위아래 마진 */
+            color: #555;
+            margin: 5px 0;
         }
     </style>
 </head>
@@ -35,7 +35,6 @@
         <td align="center">
             <table width="600">
 
-                <!-- 내용 박스 -->
                 <tr>
                     <td class="content-box">
                         <h1>안녕하세요 🎧</h1>
