--- a/src/main/resources/static/css/search.css
+++ b/src/main/resources/static/css/search.css
@@ -172,3 +172,40 @@
 .hidden {
     display: none;
 }
+
+/* =========================
+   드롭다운 통일 스타일
+========================= */
+.search-bar select {
+    height: 44px;
+    padding: 0 14px;
+    border-radius: 12px;
+    border: 1px solid #ddd;
+    font-size: 14px;
+    background: #fff;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+/* hover */
+.search-bar select:hover {
+    border-color: #aaa;
+}
+
+/* focus */
+.search-bar select:focus {
+    outline: none;
+    border-color: #777;
+}
+
+/* 기본 브라우저 화살표 정리 (Chrome 기준) */
+.search-bar select {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url("data:image/svg+xml;utf8,<svg fill='%23666' height='20' viewBox='0 0 20 20' width='20' xmlns='http://www.w3.org/2000/svg'><path d='M5.25 7.5l4.75 5 4.75-5z'/></svg>");
+    background-repeat: no-repeat;
+    background-position: right 12px center;
+    background-size: 14px;
+    padding-right: 36px;
+}
