--- a/src/main/resources/templates/search/songs.html
+++ b/src/main/resources/templates/search/songs.html
@@ -5,25 +5,27 @@
     <title>Songs | PeachMusic</title>
 
     <link rel="stylesheet" th:href="@{/css/layout.css}">
-    <link rel="stylesheet" th:href="@{/css/song-search.css}">
-    <link rel="stylesheet" th:href="@{/css/search.css}">
+    <link rel="stylesheet" th:href="@{/css/search-song.css}">
     <script th:src="@{/js/sidebar.js}" defer></script>
 </head>
 
 <body>
 
+<!-- 로그인 필요 팝업 -->
+<div id="loginPopup" class="login-popup hidden">
+    로그인이 필요한 기능입니다.
+</div>
+
 <div th:replace="~{fragments/layout :: mainLayout(~{::section})}">
 
     <section class="song-page">
 
-        <!-- 검색바 -->
         <div class="search-bar">
             <input type="text"
                    id="searchInput"
                    placeholder="Search"
                    th:value="${word}">
 
-            <!-- 정렬 기준 -->
             <select id="sortSelect">
                 <option value="LIKE">좋아요순</option>
                 <option value="PLAY">재생순</option>
@@ -31,7 +33,6 @@
                 <option value="NAME">이름순</option>
             </select>
 
-            <!-- 방향 -->
             <select id="directionSelect">
                 <option value="DESC">내림차순</option>
                 <option value="ASC">오름차순</option>
@@ -40,17 +41,16 @@
             <button id="searchBtn">검색</button>
         </div>
 
-        <!-- 제목 -->
         <div class="detail-title">
             <span id="pageTitle"></span>
         </div>
 
-        <!-- 결과 -->
         <div id="songList" class="song-list"></div>
 
-        <button id="loadMoreBtn" class="more-btn hidden">
-            더보기
-        </button>
+        <div id="sentinel"></div>
+
+        <div id="loading" class="hidden">로딩 중...</div>
+        <div id="endMessage" class="hidden">마지막 곡입니다.</div>
 
     </section>
 
@@ -60,7 +60,7 @@
     const initialWord = /*[[${word}]]*/ "";
 </script>
 
-<script type="module" th:src="@{/js/song-search.js}"></script>
+<script type="module" th:src="@{/js/search-song.js}"></script>
 
 </body>
 </html>
