✨ feat: 프론트엔드 추가 - 인기차트 - 관리자 초기 화면 - 아티스트 앨범 / 음원 미리보기 - 아티스트 앨범 자세히 보기 - 아티스트 음원 자세히 보기 - 앨범 단건 조회 연동 - 아티스트 단건 조회 연동

--- a/src/main/resources/static/css/search-artist.css
+++ b/src/main/resources/static/css/search-artist.css
@@ -86,10 +86,11 @@
     height: 180px;
     background: #f3f4f6;
     border-radius: 14px;
-    display: flex;
+    display: block;
     align-items: center;
     justify-content: center;
     overflow: hidden;
+    object-fit: cover;
 }
 
 .artist-img img {
