--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -20,7 +20,7 @@
         <div class="admin-grid">
             <a href="/admin/artists" class="admin-card blue">아티스트 관리</a>
             <a href="/admin/albums" class="admin-card green">앨범 관리</a>
-            <a href="/admin/songs" class="admin-card orange">음악 관리</a>
+            <a href="/admin/songs" class="admin-card orange">음원 관리</a>
             <a href="/admin/users" class="admin-card purple">유저 관리</a>
         </div>
 
