--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -31,6 +31,10 @@
             마이페이지
         </a>
 
+        <a class="menu-item hidden" href="/admin" id="adminBtn">
+            관리자 페이지
+        </a>
+
     </nav>
 
     <div class="auth-box">
